force-app/main/default/objects/b3s__Shift__c/b3s__Shift__c.object-meta.xml
<CustomObject>
    <label>Shift</label>
    <nameField>
        <displayFormat>SHIFT-{00000}</displayFormat>
        <label>Shift Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shifts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>