force-app/main/default/objects/b3s__Shift__c/fields/b3_Billable_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>b3_Billable_Cancellation__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Billable Cancellation</label>
    <type>Checkbox</type>
</CustomField>