force-app/main/default/objects/b3s__Shift__c/fields/b3_Client__c.field-meta.xml
<CustomField>
    <fullName>b3_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shifts</relationshipLabel>
    <relationshipName>Shifts</relationshipName>
    <type>Lookup</type>
</CustomField>