force-app/main/default/objects/b3s__Shift__c/fields/b3_Client_Comments__c.field-meta.xml
<CustomField>
    <fullName>b3_Client_Comments__c</fullName>
    <label>Client Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>