force-app/main/default/objects/b3s__Shift__c/fields/b3_Facility_Notes__c.field-meta.xml
<CustomField>
    <fullName>b3_Facility_Notes__c</fullName>
    <formula>b3s__Site__r.b3_Facility_Notes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility Notes</label>
    <type>Text</type>
</CustomField>