force-app/main/default/objects/b3s__Shift__c/fields/b3_Job_Type__c.field-meta.xml
<CustomField>
    <fullName>b3_Job_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Type</label>
    <referenceTo>b3o__Job_Type__c</referenceTo>
    <relationshipLabel>Shifts</relationshipLabel>
    <relationshipName>Shifts</relationshipName>
    <type>Lookup</type>
</CustomField>