force-app/main/default/objects/b3s__Shift__c/fields/b3_Payable_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>b3_Payable_Cancellation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payable Cancellation</label>
    <type>Checkbox</type>
</CustomField>