force-app/main/default/objects/b3s__Shift__c/fields/b3_Ready_for_Pay_Bill__c.field-meta.xml
<CustomField>
    <fullName>b3_Ready_for_Pay_Bill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for Pay &amp; Bill</label>
    <type>Checkbox</type>
</CustomField>