force-app/main/default/objects/b3s__Shift__c/fields/b3_Shift_Offer_Type__c.field-meta.xml
<CustomField>
    <fullName>b3_Shift_Offer_Type__c</fullName>
    <label>Shift Offer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consultant Selection</fullName>
                <default>true</default>
                <label>Consultant Selection</label>
            </value>
            <value>
                <fullName>Faster Finger First</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>