force-app/main/default/objects/b3s__Shift__c/fields/b3s__Absolute_Length__c.field-meta.xml
<CustomField>
    <fullName>b3s__Absolute_Length__c</fullName>
    <formula>( b3s__Absolute_End_Time__c- b3s__Absolute_Start_Time__c)*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Absolute Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>