force-app/main/default/objects/b3s__Shift__c/fields/b3s__Absolute_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>b3s__Absolute_Start_Time__c</fullName>
    <formula>IF(ISNULL( b3s__Actual_Start_Time__c ),  b3s__Scheduled_Start_Time__c ,  b3s__Actual_Start_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Absolute Start Time</label>
    <type>DateTime</type>
</CustomField>