force-app/main/default/objects/b3s__Shift__c/fields/b3s__Actual_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>b3s__Actual_Start_Time__c</fullName>
    <label>Actual Start Time</label>
    <type>DateTime</type>
</CustomField>