force-app/main/default/objects/b3s__Shift__c/fields/b3s__Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>b3s__Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sick Leave</fullName>
            </value>
            <value>
                <fullName>Authorized Absence</fullName>
            </value>
            <value>
                <fullName>Unauthorized Absence</fullName>
            </value>
            <value>
                <fullName>Client Cancellation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>