force-app/main/default/objects/b3s__Shift__c/fields/b3s__Client_Approval_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>b3s__Client_Approval_Timestamp__c</fullName>
    <label>Client Approval Timestamp</label>
    <type>DateTime</type>
</CustomField>