force-app/main/default/objects/b3s__Shift__c/fields/b3s__Client_Direct__c.field-meta.xml
<CustomField>
    <fullName>b3s__Client_Direct__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that this shift is a client direct shift and not an internal shift</inlineHelpText>
    <label>Client Direct</label>
    <type>Checkbox</type>
</CustomField>