force-app/main/default/objects/b3s__Shift__c/fields/b3s__Comments__c.field-meta.xml
<CustomField>
    <fullName>b3s__Comments__c</fullName>
    <inlineHelpText>Shift related comments, visible to all users</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>