force-app/main/default/objects/b3s__Shift__c/fields/b3s__Individual__c.field-meta.xml
<CustomField>
    <fullName>b3s__Individual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual</label>
    <referenceTo>Individual</referenceTo>
    <relationshipLabel>Shifts</relationshipLabel>
    <relationshipName>Shifts</relationshipName>
    <type>Lookup</type>
</CustomField>