force-app/main/default/objects/b3s__Shift__c/fields/b3s__Internal_Comments__c.field-meta.xml
<CustomField>
    <fullName>b3s__Internal_Comments__c</fullName>
    <label>Internal Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>