force-app/main/default/objects/b3s__Shift__c/fields/b3s__Invitations__c.field-meta.xml
<CustomField>
    <fullName>b3s__Invitations__c</fullName>
    <label>Invitations</label>
    <summaryForeignKey>b3s__Invitation__c.b3s__Shift__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>