force-app/main/default/objects/b3s__Shift__c/fields/b3s__Required_Staff__c.field-meta.xml
<CustomField>
    <fullName>b3s__Required_Staff__c</fullName>
    <label>Required Staff</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>