force-app/main/default/objects/b3s__Shift__c/fields/b3s__Scheduled_End_Time__c.field-meta.xml
<CustomField>
    <fullName>b3s__Scheduled_End_Time__c</fullName>
    <label>Scheduled End Time</label>
    <type>DateTime</type>
</CustomField>