force-app/main/default/objects/b3s__Shift__c/fields/b3s__Shift_Demand__c.field-meta.xml
<CustomField>
    <fullName>b3s__Shift_Demand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shift Demand</label>
    <referenceTo>b3s__Shift__c</referenceTo>
    <relationshipLabel>Shifts</relationshipLabel>
    <relationshipName>Shifts</relationshipName>
    <type>Lookup</type>
</CustomField>