force-app/main/default/objects/b3s__Shift__c/fields/b3s__Specialty__c.field-meta.xml
<CustomField>
    <fullName>b3s__Specialty__c</fullName>
    <label>Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Obstetrics</fullName>
            </value>
            <value>
                <fullName>Operating Room</fullName>
            </value>
            <value>
                <fullName>Catheterization Lab</fullName>
            </value>
            <value>
                <fullName>Cardiac</fullName>
            </value>
            <value>
                <fullName>Pediatrics</fullName>
            </value>
            <value>
                <fullName>Endoscopy</fullName>
            </value>
            <value>
                <fullName>Gastrointestinal</fullName>
            </value>
            <value>
                <fullName>Diagnostic Radiology</fullName>
            </value>
            <value>
                <fullName>Interventional Radiology</fullName>
            </value>
            <value>
                <fullName>Neuroradiology</fullName>
            </value>
            <value>
                <fullName>Mammography</fullName>
            </value>
            <value>
                <fullName>Musculoskeletal Radiology</fullName>
            </value>
            <value>
                <fullName>Nuclear Radiology</fullName>
            </value>
            <value>
                <fullName>General Radiology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>