force-app/main/default/objects/b3s__Shift__c/fields/b3s__Travel_Status__c.field-meta.xml
<CustomField>
    <fullName>b3s__Travel_Status__c</fullName>
    <label>Travel Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Travel Needed</fullName>
            </value>
            <value>
                <fullName>No Travel Needed</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Travel Booked</fullName>
            </value>
            <value>
                <fullName>Travel Cancelled</fullName>
            </value>
            <value>
                <fullName>Travel Revision Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>