force-app/main/default/objects/b3s__Shift__c/fields/b3s__Type__c.field-meta.xml
<CustomField>
    <fullName>b3s__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Night</fullName>
            </value>
            <value>
                <fullName>On-Call</fullName>
            </value>
            <value>
                <fullName>Swing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>