force-app/main/default/objects/b3s__Shift__c/fields/Confirm_Matching_Shifts__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Matching_Shifts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm Matching Shifts</label>
    <type>Checkbox</type>
</CustomField>