force-app/main/default/objects/b3s__Shift__c/fields/tc9_3bint__Allowance_Only__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__Allowance_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allowance Only</label>
    <type>Checkbox</type>
</CustomField>