force-app/main/default/objects/b3s__Shift__c/fields/tc9_3bint__Assignment__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignment</label>
    <referenceTo>tc9_pr__Assignment__c</referenceTo>
    <relationshipLabel>Shifts (Assignment)</relationshipLabel>
    <relationshipName>Shifts</relationshipName>
    <type>Lookup</type>
</CustomField>