force-app/main/default/objects/b3s__Shift__c/fields/tc9_3bint__AssignmentName__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__AssignmentName__c</fullName>
    <formula>b3s__Job__r.Name + &quot; - &quot; + b3s__Contact__r.FirstName + &quot; &quot; + b3s__Contact__r.LastName</formula>
    <label>AssignmentName</label>
    <type>Text</type>
</CustomField>