force-app/main/default/objects/b3s__Shift__c/fields/tc9_3bint__Award_Classification__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__Award_Classification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Award Classification</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>tc9_et__Award_Classifications_and_Levels__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Award Classification</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>tc9_et__Award_Classifications_and_Levels__c</referenceTo>
    <relationshipLabel>Shifts (Award Classification)</relationshipLabel>
    <relationshipName>Shifts1</relationshipName>
    <type>Lookup</type>
</CustomField>