force-app/main/default/objects/b3s__Shift__c/fields/tc9_3bint__B3_End_Time__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__B3_End_Time__c</fullName>
    <label>3B End Time</label>
    <type>Time</type>
</CustomField>