force-app/main/default/objects/b3s__Shift__c/fields/tc9_3bint__B3_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__B3_Start_Date__c</fullName>
    <label>3B Start Date</label>
    <type>Date</type>
</CustomField>