force-app/main/default/objects/b3s__Shift__c/fields/tc9_3bint__Costing_Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__Costing_Status__c</fullName>
    <label>Costing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_3bint__Costing_Status</valueSetName>
    </valueSet>
</CustomField>