force-app/main/default/objects/b3s__Shift__c/fields/tc9_3bint__Employee_Notes__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__Employee_Notes__c</fullName>
    <label>Employee Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>