force-app/main/default/objects/b3s__Shift__c/fields/tc9_3bint__First_Break_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__First_Break_Start_Time__c</fullName>
    <label>First Break Start Time</label>
    <type>DateTime</type>
</CustomField>