force-app/main/default/objects/b3s__Shift__c/fields/tc9_3bint__Industry__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Industry_Picklists</valueSetName>
    </valueSet>
</CustomField>