force-app/main/default/objects/b3s__Shift__c/fields/tc9_3bint__Integration_Pending__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__Integration_Pending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integration Pending</label>
    <type>Checkbox</type>
</CustomField>