force-app/main/default/objects/b3s__Shift__c/fields/tc9_3bint__Last_Costed__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__Last_Costed__c</fullName>
    <label>Last Costed</label>
    <type>DateTime</type>
</CustomField>