force-app/main/default/objects/b3s__Shift__c/fields/tc9_3bint__Margin__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__Margin__c</fullName>
    <label>Margin</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>