force-app/main/default/objects/b3s__Shift__c/fields/tc9_3bint__Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__Pay_Rate__c</fullName>
    <label>Pay Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>