force-app/main/default/objects/b3s__Shift__c/fields/tc9_3bint__Payroll_Time_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__Payroll_Time_Type__c</fullName>
    <inlineHelpText>Determines what date and time values from the Shift record will be sent to Payroll&apos;s Timesheet and Timesheet Entry. Leaving this field blank will default to using the Shifts Scheduled date and time fields for payroll.</inlineHelpText>
    <label>Payroll Time Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_3bint__Payroll_Time_Type</valueSetName>
    </valueSet>
</CustomField>