force-app/main/default/objects/b3s__Shift__c/fields/tc9_3bint__Project_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__Project_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>tc9_pr__Project_Code__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Template Level</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>tc9_pr__Project_Code__c</referenceTo>
    <relationshipLabel>Shifts</relationshipLabel>
    <relationshipName>Shifts</relationshipName>
    <type>Lookup</type>
</CustomField>