force-app/main/default/objects/b3s__Shift__c/fields/tc9_3bint__Risk_Classification__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__Risk_Classification__c</fullName>
    <label>Risk Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Risk_Classification_Picklist</valueSetName>
    </valueSet>
</CustomField>