force-app/main/default/objects/b3s__Shift__c/fields/tc9_3bint__Second_Break_Length__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__Second_Break_Length__c</fullName>
    <label>Second Break Length</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>