force-app/main/default/objects/b3s__Shift__c/fields/tc9_3bint__Sent_to_Payroll__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__Sent_to_Payroll__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent to Payroll</label>
    <type>Checkbox</type>
</CustomField>