force-app/main/default/objects/b3s__Shift__c/fields/tc9_3bint__Timesheet__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__Timesheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Timesheet</label>
    <referenceTo>tc9_et__Timesheet__c</referenceTo>
    <relationshipLabel>Shifts (Timesheet)</relationshipLabel>
    <relationshipName>Shifts</relationshipName>
    <type>Lookup</type>
</CustomField>