force-app/main/default/objects/b3s__Shift__c/fields/tc9_3bint__Timesheet_Entry__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__Timesheet_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Timesheet Entry</label>
    <referenceTo>tc9_et__Timesheet_Entry__c</referenceTo>
    <relationshipLabel>Shifts (Timesheet Entry)</relationshipLabel>
    <relationshipName>Shifts</relationshipName>
    <type>Lookup</type>
</CustomField>