force-app/main/default/objects/b3s__Shift__c/fields/tc9_3bint__TSE_End_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__TSE_End_Date__c</fullName>
    <formula>tc9_3bint__B3_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The End Date of the Timesheet Entry created and updated by the 2cloudnine Integration.</inlineHelpText>
    <label>TSE End Date</label>
    <type>Date</type>
</CustomField>