force-app/main/default/objects/b3s__Shift__c/fields/tc9_3bint__TSE_End_Time__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__TSE_End_Time__c</fullName>
    <formula>tc9_3bint__B3_End_Time__c</formula>
    <inlineHelpText>The end time value that will be sent to payroll&apos;s Timesheet Entry. This value is determined based upon the Payroll Time Type field. If no Payroll Time Type is selected, this will default to the Scheduled end time.</inlineHelpText>
    <label>TSE End Time</label>
    <type>Time</type>
</CustomField>