force-app/main/default/objects/b3s__Shift__c/fields/tc9_3bint__TSE_First_Break_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__TSE_First_Break_Date__c</fullName>
    <inlineHelpText>The First Break Date sent to 2cloudnine Payroll during integration.</inlineHelpText>
    <label>TSE First Break Date</label>
    <type>Date</type>
</CustomField>