force-app/main/default/objects/b3s__Shift__c/fields/tc9_3bint__TSE_First_Break_Paid__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__TSE_First_Break_Paid__c</fullName>
    <description>Defines if the first break will be considered a paid break and therefore not subtracted from the Total Hours.</description>
    <inlineHelpText>Defines if the first break will be considered a paid break and therefore not subtracted from the Total Hours.</inlineHelpText>
    <label>TSE First Break Paid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>