force-app/main/default/objects/b3s__Shift__c/fields/tc9_3bint__TSE_Second_Break_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__TSE_Second_Break_Date__c</fullName>
    <label>TSE Second Break Date</label>
    <type>Date</type>
</CustomField>