force-app/main/default/objects/b3s__Shift__c/fields/tc9_3bint__TSE_Second_Break_Time__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__TSE_Second_Break_Time__c</fullName>
    <label>TSE Second Break Time</label>
    <type>Time</type>
</CustomField>