force-app/main/default/objects/b3s__Shift__c/validationRules/b3s__Demand_Cannot_Be_Assigned.validationRule-meta.xml
<ValidationRule>
    <fullName>b3s__Demand_Cannot_Be_Assigned</fullName>
    <active>true</active>
    <description>A shift demand itself may not be assigned to a person.</description>
    <errorConditionFormula>b3s__Required_Staff__c &gt; 1 &amp;&amp; NOT(ISBLANK(b3s__Contact__c))</errorConditionFormula>
    <errorDisplayField>b3s__Contact__c</errorDisplayField>
    <errorMessage>A shift demand cannot be assigned to a contact record</errorMessage>
</ValidationRule>