force-app/main/default/objects/b3s__Shift__c/validationRules/b3s__DNU.validationRule-meta.xml
<ValidationRule>
    <fullName>b3s__DNU</fullName>
    <active>false</active>
    <errorConditionFormula>1==1</errorConditionFormula>
    <errorMessage>This shift cannot be updated</errorMessage>
</ValidationRule>