force-app/main/default/objects/b3s__Shift__c/listViews/All_ATS_Shifts_This_Week.listView-meta.xml
<ListView>
    <fullName>All_ATS_Shifts_This_Week</fullName>
    <columns>NAME</columns>
    <columns>b3s__Contact__c</columns>
    <columns>b3s__Status__c</columns>
    <columns>b3s__Site__c</columns>
    <columns>b3s__Job__c</columns>
    <columns>b3s__Comments__c</columns>
    <columns>b3s__Scheduled_Start_Time__c</columns>
    <columns>b3s__Scheduled_End_Time__c</columns>
    <columns>b3s__Absolute_Start_Time__c</columns>
    <columns>b3s__Absolute_End_Time__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>b3s__Scheduled_Start_Time__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <filters>
        <field>b3s__Job__c</field>
        <operation>contains</operation>
        <value>Autotransfusionist</value>
    </filters>
    <label>All ATS Shifts This Week</label>
</ListView>